--- a/jscamp/00-html-css/styles.css
+++ b/jscamp/00-html-css/styles.css
@@ -489,3 +489,12 @@ article {
     pointer-events: none;
   }
 }
+
+#boton-importante{
+  background: rgb(0, 78, 130);
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
